moved into webroot folder

--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -22,11 +22,10 @@
     <![endif]-->
     <link rel="stylesheet" href="/css/main.css" type="text/css" />
     <link rel="stylesheet" href="/css/tables.css" type="text/css" />
-    <link rel="stylesheet" href="/css/fixes_to_old_embedded_css.css" type="text/css" />
     <link rel="shortcut icon" type="image/png" href="/favicon.png"/>
     <link href="/index.xml" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }} RSS" />
     <link href="/index.xml" rel="feed" type="application/rss+xml" title="{{ .Site.Title }} RSS" />
-    <meta name="google-site-verification" content="gC-CBWWuKRpe-1q8OfQfyG_CYkOk_Du8sMdVpWkNVT8" />
+    <!-- <meta name="google-site-verification" content="gC-CBWWuKRpe-1q8OfQfyG_CYkOk_Du8sMdVpWkNVT8" /> -->
     
   </head>
   <body>
@@ -36,19 +35,19 @@
         &nbsp;<i>{{.Site.Params.tagline}}</i>
       </div>
       <div class="col-xs-5">
-        <a href="https://www.youtube.com/channel/UCaFJkvrnVj59F66kZ2AhedA/videos" title="Youtube" name="Youtube">
+<!--         <a href="https://www.youtube.com/channel/UCaFJkvrnVj59F66kZ2AhedA/videos" title="Youtube" name="Youtube">
           <img class="navbar-icon" src="/theme_images/icons/youtube.png"/>
-        </a>
+        </a> -->
 <!--         <a href="https://facebook.com/dublincore/" title="Facebook" name="Facebook">
           <img class="navbar-icon" src="/theme_images/icons/facebook.png"/>
         </a>
         <a href="https://www.linkedin.com/company-beta/1123378/" title="Linkedin" name="LinkedIn">
           <img class="navbar-icon" src="/theme_images/icons/linkedin.png"/>
         </a> -->
-        <a href="https://twitter.com/dublincore" title="Twitter" name="Twitter">
+        <a href="https://twitter.com/COAR_eV" title="Twitter" name="Twitter">
           <img class="navbar-icon" src="/theme_images/icons/twitter.png"/>
         </a>
-        <a href="https://github.com/dcmi" title="Github" name="Github">
+        <a href="https://github.com/coar-repositories/ngr" title="Github" name="Github">
           <img class="navbar-icon" src="/theme_images/icons/github.png"/>
         </a>
         <a type="application/rss+xml" href="/index.xml" title="RSS" name="RSS">
@@ -56,12 +55,12 @@
         </a>
       </div>
     </div>
-    <div class="row-fluid">
+    <!-- <div class="row-fluid">
       <div class="col-xs-12">
         <a href="/">
           <img class="home-page-logo" src="/images/_site_images/header.png"/>
         </a>
       </div>
-    </div>
+    </div> -->
     {{ partial "navibar" . }}
 
