added some content

--- a/webroot/themes/coar_ngr/layouts/partials/footer.html
+++ b/webroot/themes/coar_ngr/layouts/partials/footer.html
@@ -2,7 +2,7 @@
   <div class="col-xs-12">
     <hr/>
     <div id="footer">
-      <p>Designed by [Paul Walk](http://www.paulwalk.net). Deployed with Hugo v. {{.Hugo.Version}}</p>
+      <p>Designed by <a href="http://www.paulwalk.net">Paul Walk</a>. Deployed with Hugo v. {{.Hugo.Version}}</p>
     </div>
   </div>
 </div>
