added highlighting for incomplete text

--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -32,6 +32,7 @@
 
     <div class="row-fluid">
       <div class="col-xs-7">
+        <h1>COAR NGR</h1> 
         &nbsp;<i>{{.Site.Params.tagline}}</i>
       </div>
       <div class="col-xs-5">
