--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -32,7 +32,8 @@
 
     <div class="row-fluid">
       <div class="col-xs-7">
-        <h1>COAR NGR</h1> 
+        <a href="/"><img src="/images/coar-logo.png" style="max-width: 150px;"/></a>
+        <br/>
         &nbsp;<i>{{.Site.Params.tagline}}</i>
       </div>
       <div class="col-xs-5">
