turned user stories into bulleted lists

--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -52,9 +52,9 @@
         <a href="https://github.com/coar-repositories/ngr" title="Github" name="Github">
           <img class="navbar-icon" src="/theme_images/icons/github.png"/>
         </a>
-        <a type="application/rss+xml" href="/index.xml" title="RSS" name="RSS">
+<!--         <a type="application/rss+xml" href="/index.xml" title="RSS" name="RSS">
           <img class="navbar-icon" src="/theme_images/icons/rss.png"/>
-        </a>
+        </a> -->
       </div>
     </div>
     <!-- <div class="row-fluid">
