--- a/webroot/themes/coar_ngr/layouts/partials/footer.html
+++ b/webroot/themes/coar_ngr/layouts/partials/footer.html
@@ -1,31 +1,9 @@
-<div class="row-fluid">
-  <div class="col-xs-12">
-    <hr/>
-    <div id="footer">
-      <p>Designed by <a href="http://www.paulwalk.net">Paul Walk</a>. Deployed with Hugo v. {{.Hugo.Version}}</p>
-    </div>
+<div id="footer" class="row justify-content-left">
+  <div class="col">
+    <p>
+      Designed by <a href="http://www.paulwalk.net">Paul Walk</a>. Deployed with Hugo v. {{.Hugo.Version}}
+    </p>
   </div>
 </div>
-
-
-
-
-<!-- <script type="text/javascript">
-  var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
-  document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
-</script>
-<script type="text/javascript">
-  try {
-    var pageTracker = _gat._getTracker("UA-24510931-1");
-    pageTracker._trackPageview();
-  }
-  catch(err) {
-
-  }
-</script> -->
-
-
-
-
 </body>
 </html>
