refactored technologies pages

--- a/webroot/themes/coar_ngr/layouts/_default/single.html
+++ b/webroot/themes/coar_ngr/layouts/_default/single.html
@@ -1,5 +1,7 @@
 {{ define "main" }}
-  <div class="row justify-content-start">
-    {{ .Content }}
+  <div class="row">
+  	<div class="col">
+    	{{ .Content }}
+  	</div>
   </div>
 {{ end }}
