--- a/webroot/themes/coar_ngr/layouts/partials/navbar.html
+++ b/webroot/themes/coar_ngr/layouts/partials/navbar.html
@@ -2,7 +2,7 @@
   <div class="col-xs-8">
     <nav class="nav nav-fill">
       <a class="nav-link" href="/">Vision &amp; Objectives</a>
-      <a class="nav-link" href="/principle/">Principles</a>
+      <a class="nav-link" href="/principles/">Principles</a>
       <a class="nav-link" href="/design_assumptions/">Design Assumptions</a>
       <a class="nav-link" href="/behaviour/">Behaviours</a>
       <a class="nav-link" href="/about/">About</a>
