--- a/webroot/themes/coar_ngr/layouts/partials/navbar.html
+++ b/webroot/themes/coar_ngr/layouts/partials/navbar.html
@@ -5,6 +5,7 @@
       <a class="nav-link" href="/principles/">Principles</a>
       <a class="nav-link" href="/design_assumptions/">Design Assumptions</a>
       <a class="nav-link" href="/behaviour/">Behaviours</a>
+      <a class="nav-link" href="/technology/">Technologies</a>
       <a class="nav-link" href="/about/">About</a>
     </nav>
   </div>
