esstablished automated relationship between behaviours and technologies

--- a/webroot/themes/coar_ngr/layouts/partials/footer.html
+++ b/webroot/themes/coar_ngr/layouts/partials/footer.html
@@ -1,5 +1,5 @@
-<div id="footer" class="row justify-content-left">
-  <div class="col">
+<div id="footer" class="row justify-content-end">
+  <div class="col-xs-12">
     <p>
       Designed by <a href="http://www.paulwalk.net">Paul Walk</a>. Deployed with Hugo v. {{.Hugo.Version}}
     </p>
