--- a/webroot/themes/coar_ngr/layouts/technology/single.html
+++ b/webroot/themes/coar_ngr/layouts/technology/single.html
@@ -1,7 +1,18 @@
 {{ define "main" }}
 <div class="row justify-content-start">
-  <div class="col">
+  <div class="col-sm-8 col-xs-12">
     {{.Content}}
+  </div>
+  <div class="col-sm-4 col-xs-12">
+    <h2>Related behaviours</h2>
+    {{ $technology_name := slice .File.TranslationBaseName }}
+    <ul>
+    {{ range where .Site.Pages ".Params.technologies" "intersect" $technology_name }}
+      <li><a href="{{ .Permalink }}">{{ .Title }}</a></li>
+    {{ end }}
+    </ul>
   </div>
 </div>
 {{ end }}
+
+
