--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -14,7 +14,7 @@
 <div class="row justify-content-start">
   <div class="col-xs-12">
     <a href="/">
-      <img class="home-page-logo" src="/images/coar-logo.png"/>
+      <img class="home-page-logo" src="/images/ngr-logo-lowres.png"/>
     </a>
   </div>
 </div>
