--- a/webroot/themes/coar_ngr/static/css/coar-ngr.css
+++ b/webroot/themes/coar_ngr/static/css/coar-ngr.css
@@ -144,11 +144,11 @@ a.site-title:hover,a.navbar-link:hover {
 }
 
 img.home-page-logo {
-  margin-top: 10px;
+  margin-top: 2px;
   margin-right: 0px;
   margin-bottom: 2px;
-  max-width: 1000px;
-  width: 100%;
+  max-width: 150px;
+  /*width: 100%;*/
 }
 
 div.post-metadata {
