--- a/webroot/themes/coar_ngr/layouts/partials/navbar.html
+++ b/webroot/themes/coar_ngr/layouts/partials/navbar.html
@@ -7,6 +7,7 @@
       <a class="nav-link" href="/behaviour/">Behaviours</a>
       <a class="nav-link" href="/technology/">Technologies</a>
       <a class="nav-link" href="/about/">About</a>
+      <a class="nav-link" href="/contributions/">How to contribute</a>
     </nav>
   </div>
 </div>
