changed link under COAR logo to point to COAR page

--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -18,7 +18,7 @@
     </a>
   </div>
   <div class="col-xs-6 float-right">
-    <a href="/">
+    <a href="https://www.coar-repositories.org/activities/advocacy-leadership/working-group-next-generation-repositories/">
       <img class="home-page-logo coar-logo" src="/images/coar-logo.png"/>
     </a>
   </div>
