--- a/webroot/themes/coar_ngr/layouts/partials/header.html
+++ b/webroot/themes/coar_ngr/layouts/partials/header.html
@@ -19,7 +19,7 @@
   </div>
   <div class="col-xs-6 float-right">
     <a href="https://www.coar-repositories.org/activities/advocacy-leadership/working-group-next-generation-repositories/">
-      <img class="home-page-logo coar-logo" src="/images/coar-logo.png"/>
+      <img class="home-page-logo coar-logo" src="/images/COAR-logo_L.jpg"/>
     </a>
   </div>
 </div>
