--- a/webroot/themes/coar_ngr/layouts/partials/navbar.html
+++ b/webroot/themes/coar_ngr/layouts/partials/navbar.html
@@ -4,10 +4,11 @@
       <a class="nav-link" href="/">Vision &amp; Objectives</a>
       <a class="nav-link" href="/principles/">Principles</a>
       <a class="nav-link" href="/design_assumptions/">Design Assumptions</a>
+      <a class="nav-link" href="/user_stories/">User Stories</a>
       <a class="nav-link" href="/behaviour/">Behaviours</a>
       <a class="nav-link" href="/technology/">Technologies</a>
+      <!-- <a class="nav-link" href="/use_cases/">Use cases</a> -->
       <a class="nav-link" href="/about/">About</a>
-      <a class="nav-link" href="/contributions/">How to contribute</a>
     </nav>
   </div>
 </div>
