--- a/webroot/themes/coar_ngr/layouts/behaviour/single.html
+++ b/webroot/themes/coar_ngr/layouts/behaviour/single.html
@@ -5,13 +5,14 @@
   </div>
   <div class="col-sm-4 col-xs-12">
     <h2>Related technologies</h2>
-    <ul>
-    {{range .Params.technologies}}
-      {{$tech_name := printf "%s.md" .}}
-      {{ with $.Site.GetPage (print "technology/" $tech_name) }}
-        <li><a href="{{.Permalink}}">{{.Title}}</a></li>
+    {{ with .Params.technologies }}
+      <ul>
+      {{ range . }}
+        {{ with $.Site.GetPage (print "/technology/" . "/index.md") }}
+          <li><a href="{{.RelPermalink}}">{{.Title}}</a></li>
+        {{ end }}
       {{ end }}
+      </ul>
     {{ end }}
-    </ul>
   </div>
 {{ end }}
