--- a/webroot/themes/coar_ngr/layouts/partials/footer.html
+++ b/webroot/themes/coar_ngr/layouts/partials/footer.html
@@ -1,7 +1,7 @@
 <div id="footer" class="row justify-content-end">
   <div class="col-xs-12">
     <p>
-      Designed by <a href="http://www.antleaf.com">Antleaf</a>. Deployed with Hugo v. {{.Hugo.Version}}
+      Designed by <a href="http://www.antleaf.com">Antleaf</a>. Deployed with Hugo v. {{hugo.Version}}
     </p>
   </div>
 </div>
