--- a/webroot/themes/coar_ngr/layouts/partials/head.html
+++ b/webroot/themes/coar_ngr/layouts/partials/head.html
@@ -4,7 +4,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
   <title>{{.Site.Title}}{{if .Title}}: {{.Title}}{{end}}</title>
-  {{.Hugo.Generator}}
+  {{hugo.Generator}}
 <!--   <script src="/js/bootstrap.bundle.min.js"></script>
   <script src="/js/bootstrap.min.js"></script> -->
   <link href="https://fonts.googleapis.com/css?family=Fira+Mono:400" rel="stylesheet">
